--- a/public/index.html
+++ b/public/index.html
@@ -11,7 +11,41 @@
   </head>
   <body>
 
+    <div class="container-fluid" id="app-container">
+    <div class="container">
+    <div class="row app-row">
+      <div id="left-panel-region" class="col-xs-4 leftColumn-global">
+        <div class="row navsection">
+          <h3><span class="glyphicon glyphicon-th-large"></span></h3>
+        </div>
+        <div id="new-list-btn-region" class="row col-xs-offset-1"></div>
+        <div class="pending-list-region-Container  col-xs-offset-1">
+          <h4>
+            <span class="glyphicon glyphicon-list"></span>
+            Pending:
+          </h4>
+          <div id="pending-list-region" class="row col-xs-9 col-xs-offset-1"></div>
+        </div>  <!-- end of pending-list-region-Container -->
+        <div id="completed-list-region" class="row">
 
+        </div>
+      </div>
+      <div id="right-panel-region" class="col-xs-8 rightColumn-global"></div>
+    </div>
+    </div>
+    </div>
+
+    <script id="left-panel-list" type="text/template">
+        <span class="left-panel-list-title"><%- title %></span>
+    </script>
+        <!-- <span class="glyphicon glyphicon-pencil" style="float: right"></span> -->
+
+    <script id="left-panel-lists" type="text/template">
+    </script>
+
+    <script id="left-panel-newlistbtn" type="text/template">
+      <button class="new-list-btn btn">+ New List:</button>
+    </script>
 
 
 
@@ -27,11 +61,15 @@
     <script src="js/vendor/json2.js"></script>
     <script src="js/vendor/underscore.js"></script>
     <script src="js/vendor/backbone.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/backbone-localstorage.js/1.1.16/backbone.localStorage.js"></script>
     <script src="js/vendor/backbone.marionette.js"></script>
 
 
     <!-- app -->
-    <script src="js/app.js"></script>
+    <script src="js/main_app/app.js"></script>
+    <script src="js/main_app/controller.js"></script>
+    <script src="js/main_app/entities.js"></script>
+    <script src="js/main_app/views.js"></script>
 
     <!--####### Module LEFTPANEL #######-->
     <!-- App.LeftPanel -->
@@ -49,7 +87,7 @@
 
 
     <script type="text/javascript">
-      // App.start()
+      App.start()
     </script>
 
   </body>
