--- a/public/index.html
+++ b/public/index.html
@@ -19,6 +19,9 @@
           <h3><span class="glyphicon glyphicon-th-large"></span></h3>
         </div>
         <div id="new-list-btn-region" class="row col-xs-offset-1"></div>
+
+
+
         <div class="pending-list-region-Container  col-xs-offset-1">
           <h4>
             <span class="glyphicon glyphicon-list"></span>
@@ -26,7 +29,16 @@
           </h4>
           <div id="pending-list-region" class="row col-xs-9 col-xs-offset-1"></div>
         </div>  <!-- end of pending-list-region-Container -->
-        <div id="completed-list-region" class="row">
+  
+        <div class="completed-list-region-Container  col-xs-offset-1">
+          <h4>
+            <span class="glyphicon glyphicon-ok-sign"></span>
+            Completed:
+          </h4>
+          <div id="completed-list-region" class="row col-xs-9 col-xs-offset-1"></div>
+        </div>  <!-- end of completed-list-region-Container -->
+
+
 
         </div>
       </div>
@@ -38,10 +50,13 @@
     <script id="left-panel-list" type="text/template">
         <span class="left-panel-list-title"><%- title %></span>
     </script>
-        <!-- <span class="glyphicon glyphicon-pencil" style="float: right"></span> -->
 
-    <script id="left-panel-lists" type="text/template">
+    <script id="left-panel-cmp-lists" type="text/template">
     </script>
+    <script id="left-panel-pnd-lists" type="text/template">
+    </script>
+
+
 
     <script id="left-panel-newlistbtn" type="text/template">
       <button class="new-list-btn btn">+ New List:</button>
