switching between completed adn pending and displaying it accomplished. Freezing this feature and switching it to change list name on click childview

--- a/public/index.html
+++ b/public/index.html
@@ -22,15 +22,15 @@
 
 
 
-        <div class="pending-list-region-Container  col-xs-offset-1">
+        <div class="pending-list-region-Container row col-xs-offset-1">
           <h4>
             <span class="glyphicon glyphicon-list"></span>
             Pending:
           </h4>
           <div id="pending-list-region" class="row col-xs-9 col-xs-offset-1"></div>
         </div>  <!-- end of pending-list-region-Container -->
-  
-        <div class="completed-list-region-Container  col-xs-offset-1">
+
+        <div class="completed-list-region-Container row col-xs-offset-1">
           <h4>
             <span class="glyphicon glyphicon-ok-sign"></span>
             Completed:
@@ -54,6 +54,8 @@
     <script id="left-panel-cmp-lists" type="text/template">
     </script>
     <script id="left-panel-pnd-lists" type="text/template">
+    </script>
+    <script id="left-panel-lists" type="text/template">
     </script>
 
 
