Left column finish. Going to the right column

--- a/public/index.html
+++ b/public/index.html
@@ -50,6 +50,8 @@
     <script id="left-panel-list" type="text/template">
         <span class="left-panel-list-title"><%- title %></span>
     </script>
+        
+        <!-- <input id="left-panel-input-title" type="text" class="hidden form-control"> -->
 
     <script id="left-panel-cmp-lists" type="text/template">
     </script>
