--- a/public/index.html
+++ b/public/index.html
@@ -117,7 +117,7 @@
       <!-- header add new card -->
       <div class="row">
         <div class="col-xs-9 col-xs-offset-1">
-          <a>
+          <a id="newCard-anchor">
             + &nbsp;&nbsp;&nbsp; Add new Card
           </a>
           <hr>
