right body displaying correctly. Im going to change the UX completelly, trying to assimilate it to a trello like app

--- a/public/index.html
+++ b/public/index.html
@@ -123,9 +123,14 @@
           <hr>
         </div>
       </div>
-
     </script>
 
+    <script id="right-panel-cards" type="text/template">
+    </script>
+
+    <script id="right-panel-card" type="text/template">
+      <%- title %>
+    </script>
 
 
     <!-- ################################### -->
